<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/todo_item_titreG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_app_titre"
        style="@style/titre_general_style"
         />
    <TextView
        android:id="@+id/texte_ajouter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_nouvelle_tache"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/texte_ajouter_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_ajouter_tache"
            android:textSize="@dimen/taille_texte_normal"
            android:layout_marginEnd="15dp"/>
        <EditText
            android:id="@+id/input_nom_ajouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_nom_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp">
        <TextView
            android:id="@+id/texte_ajouter_priorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priorite_texte_ajout"
            android:textSize="@dimen/taille_texte_normal"
            android:layout_marginEnd="15dp"/>
<!--        <Spinner-->
<!--            android:id="@+id/spinner_priorite_ajouter"-->
<!--            android:layout_width="8dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            />-->

        <EditText
            android:id="@+id/input_priorite_ajouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Haute" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >
            <TextView
                android:id="@+id/text_date_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_limite"/>
            <EditText
                android:id="@+id/editText_date_limite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/btn_calendrier"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/calendar_vector"
                android:layout_marginStart="10dp"
                />
<!--            <Spinner-->
<!--                android:id="@+id/spinner_date_limite"-->
<!--                android:layout_width="8dp"-->
<!--                android:layout_height="wrap_content"-->
<!--            />-->
    </LinearLayout>
    <Button
        android:id="@+id/btn_valider_tache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_valider_ajout"
        android:layout_gravity="center_horizontal"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end">
        <Button
            android:id="@+id/btn_retour_accueil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="X"
            android:background="@drawable/btn_rond"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            />
    </RelativeLayout>

</LinearLayout>